--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    ParkingCare v0.0.2
-  </h1>
+<div class="container">
+	<div class="jumbotron">
+	  <h1>
+	    ParkingCare
+	  </h1>
+	</div>
+  <router-outlet></router-outlet>
 </div>
-<router-outlet></router-outlet>
 
