--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body, .container { height: 100%; }
+
+body {
+	background: Url('/assets/bg.jpg') center center no-repeat;
+	background-size: cover;
+}
+
+.container {
+	background-color: rgba(255, 255, 255, 0.9);
+}
