--- a/src/app/spotcard/spotcard.component.html
+++ b/src/app/spotcard/spotcard.component.html
@@ -1,4 +1,50 @@
-<div>
-	<h2>Spot {{ selectedSpot?.title }}</h2>
-
+<div class="row">
+	<div class="col-md-12" style="background: green; color: white; padding-bottom: 10px;">		
+			<h3>Spot {{ selectedSpot?.title }}</h3>
+	</div>
 </div>
+<div class="row">
+	<div class="col-md-3">
+		<h3>Info</h3>
+		<hr/>
+
+		<div class="row">
+			<div class="col-sm-4 text-muted">Title</div>
+			<div class="col-sm-8" [innerHTML]="selectedSpot?.title">&nbsp;</div>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-4 text-muted">Floor</div>
+			<div class="col-sm-8" [innerHTML]="selectedSpot?.floor">&nbsp;</div>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-4 text-muted">Type</div>
+			<div class="col-sm-8" [innerHTML] = "selectedSpot?.type">&nbsp;</div>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-4 text-muted">Description</div>
+			<div class="col-sm-8" [innerHTML] = "selectedSpot?.content">&nbsp;</div>
+		</div>
+
+		<a routerLink="/spots/{{ selectedSpot.slug}}/edit" class="btn btn-sm btn-primary">Edit</a>
+
+	</div>
+	<div class="col-md-3">
+		<h3>Payments</h3>
+		<hr/>
+		<app-eventlist [spotevents] = "selectedSpot.payments"></app-eventlist>
+	</div>
+	<div class="col-md-3">
+		<h3>Cleaning</h3>
+		<hr/>
+		<app-eventlist [spotevents] = "selectedSpot.cleanings"></app-eventlist>
+	</div>
+	<div class="col-md-3">
+		<h3>Maintenance</h3>
+		<hr/>
+		<app-eventlist [spotevents] = "selectedSpot.maintenances"></app-eventlist>
+	</div>
+</div>
+
