--- a/src/app/eventcardedit/eventcardedit.component.html
+++ b/src/app/eventcardedit/eventcardedit.component.html
@@ -10,18 +10,18 @@
 	<div class="form">
 
 		<div class="form-group row">
+			<label class="col-sm-2 control-label">Type</label>
+			<div class="col-sm-10">
+				<select [(ngModel)] = "selectedEvent.type" class="form-control" (ngModelChange)="setEventTitle()">
+					<option *ngFor="let eventType of eventTypes" [value]="eventType">{{ eventType }}</option>
+				</select>
+			</div>
+		</div>
+
+		<div class="form-group row">
 			<label class="col-sm-2 control-label">Title</label>
 			<div class="col-sm-10">
 				<input type="text" class="form-control" [(ngModel)] = "selectedEvent.title">
-			</div>
-		</div>
-		
-		<div class="form-group row">
-			<label class="col-sm-2 control-label">Type</label>
-			<div class="col-sm-10">
-				<select [(ngModel)] = "selectedEvent.type" class="form-control">
-					<option *ngFor="let eventType of eventTypes" [value]="eventType">{{ eventType }}</option>
-				</select>
 			</div>
 		</div>
 		
@@ -33,6 +33,7 @@
 		</div>
 
 		<button class="btn btn-success" (click)="saveEvent()">Save</button>
+		<a class="btn"  routerLink="/spots/{{ selectedSpot.slug}}">Cancel</a>
 
 	</div>
 	</div>
