--- a/src/app/spotlist/spotlist.component.html
+++ b/src/app/spotlist/spotlist.component.html
@@ -1,25 +1,28 @@
 <table class="table">
 	<thead>
 		<tr>
+			<th>Floor</th>
 			<th>Number</th>
 			<th>Type</th>
-			<th>Cleaned</th>
-			<th>Maintained</th>
-			<th>Paid</th>
-			<th></th>
+			<th class="text-center">Cleaned</th>
+			<th class="text-center">Maintained</th>
+			<th class="text-center">Paid</th>
+			<th>
+				<a class="btn btn-primary btn-sm" routerLink="/createspot">Add spot</a>
+			</th>
 		</tr>
 	</thead>
 	<tbody>
 		<tr *ngFor="let spot of spots">
+			<td class="text-muted">{{ spot.floor }}</td>
 			<td><a routerLink="/spots/{{ spot.slug }}">{{ spot.title }}</a></td>
 			<td>{{ spot.type }}</td>
-			<td>{{ spot.cleanings.length }}</td>
-			<td>{{ spot.maintenances.length }}</td>
-			<td>{{ spot.payments.length }}</td>
+			<td class="text-center">{{ spot.cleanings.length }}</td>
+			<td class="text-center">{{ spot.maintenances.length }}</td>
+			<td class="text-center">{{ spot.payments.length }}</td>
 			<td>
 				<a class="btn btn-primary btn-sm" routerLink="/spots/{{ spot.slug }}/addevent">Add event</a>
 				<a class="btn btn-primary btn-sm" routerLink="/spots/{{ spot.slug }}/edit" title="Edit spot">Edit</a>
-				<button class="btn btn-danger btn-sm" (click)="remove(spot)">&times;</button>
 			</td>
 		</tr>
 	</tbody>
