--- a/src/app/spotcardedit/spotcardedit.component.html
+++ b/src/app/spotcardedit/spotcardedit.component.html
@@ -36,6 +36,13 @@
 			</div>
 		</div>
 
+		<div *ngIf="selectedSpot.type != 'Vacant'" class="form-group row">
+			<label class="col-sm-2 control-label">Customer</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" [(ngModel)] = "selectedSpot.customer">
+			</div>
+		</div>
+
 		<div class="form-group row">
 			<label class="col-sm-2 control-label">Remarks</label>
 			<div class="col-sm-10">
